# tee

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
examples/: .#simple.rs  simple.rs
implementors/std/io/: trait.Read.js
src/: lib.rs
src/tee/: lib.rs.html
tee/: index.html  sidebar-items.js  struct.TeeReader.html
