[package]
name = "tee"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "An adapter for readers which delegate reads to a writer"
documentation = "http://softprops.github.io/tee"
homepage = "https://github.com/softprops/tee"
repository = "https://github.com/softprops/tee"
keywords = ["io"]
license = "MIT"
